{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 82,
  "lineage": "9721e36c-0526-e532-4bc2-722cb8812e0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:850995574024:instance/i-0e090ba58a8d73a8d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e090ba58a8d73a8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0faa93c4fc216a339",
            "private_dns": "ip-10-0-1-157.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-13-201-50-54.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.50.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f8e8958bdd1dd68",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005981e57dbb4a759",
            "tags": {
              "Env": "Prod",
              "Name": "Prod-Server",
              "Owner": "rakshith"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "Prod-Server",
              "Owner": "rakshith"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a18c0ac3388153fa"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:850995574024:internet-gateway/igw-0e9ee4380334eeb53",
            "id": "igw-0e9ee4380334eeb53",
            "owner_id": "850995574024",
            "tags": {
              "Name": "igw-terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "igw-terra",
              "Service": "Terraform"
            },
            "vpc_id": "vpc-07acbf7bcb7c20128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:850995574024:route-table/rtb-0c9886aa9bda8f9b4",
            "id": "rtb-0c9886aa9bda8f9b4",
            "owner_id": "850995574024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9ee4380334eeb53",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "rt-terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-07acbf7bcb7c20128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:850995574024:security-group/sg-0a18c0ac3388153fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a18c0ac3388153fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241221105706370900000001",
            "name_prefix": "terraform-",
            "owner_id": "850995574024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "SG-Terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-07acbf7bcb7c20128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:850995574024:subnet/subnet-005981e57dbb4a759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005981e57dbb4a759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "850995574024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "var.Subnet_tag",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "var.Subnet_tag",
              "Service": "Terraform"
            },
            "vpc_id": "vpc-07acbf7bcb7c20128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:850995574024:vpc/vpc-07acbf7bcb7c20128",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048f41947ea6e52c8",
            "default_route_table_id": "rtb-0e6417d6e1b04421d",
            "default_security_group_id": "sg-0befa86b33461c173",
            "dhcp_options_id": "dopt-0cf5014d7c5f063e8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07acbf7bcb7c20128",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6417d6e1b04421d",
            "owner_id": "850995574024",
            "tags": {
              "Name": "vpc-terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "vpc-terra",
              "Service": "Terraform"
            }
          }
        }
      ]
    }
  ]
}